sort.basic.bubble.AlgBubbleSort3.scala.error
Erreur de compilation :
AlgBubbleSort3:4: error: not found: value i
                     {g=false;for (j<- 0 to i)
                                            ^AlgBubbleSort3:5: error: not found: value i
                        {if(plusPetit(j+1,j)){echange(i,j);g=true}}
                                                      ^