sort.basic.bubble.AlgBubbleSort3.scala.code
def bubbleSort3() {
  var g=false; for(1<-(getNombreValeurs()-2) to 0 by -1)
                   	{g=false;for (j<- 0 to i)
                      	{if(plusPetit(j+1,j)){echange(i,j);g=true}}
                     if (g==false){return}}
}